--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,9 @@
 
 </head>
 
-<body style="font-family:sans-serif;color:red;padding:0;margin:0;">
+<body style="font-family:sans-serif;font-size:2rem;color:red;padding:0;margin:0;">
 
-  <bb-boat-listing boat-id="5h6dT8yvhCRy7pYeFNl5"></bb-boat-listing>
-
-  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+  <bb-connector root="/brokerage" base="profile" path="cQEBJhCO"></bb-connector>
 
 </body>
 
