--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 
 </head>
 
-<body style="font-family:sans-serif;font-size:1rem;color:red;padding:0;margin:0;">
+<body style="font-family:sans-serif;font-size:1rem;color:red;padding:0;margin:0 auto;max-width:70rem;">
 
-  <bb-connector root="/brokerage" base="profile" path="cQEBJhCO"></bb-connector>
+  <bb-connector mode="hash" base="profile" path="cQEBJhCO"></bb-connector>
 
 </body>
 
