--- a/src/index.html
+++ b/src/index.html
@@ -9,29 +9,44 @@
   <script type="module" src="/build/bb-components.esm.js"></script>
   <script nomodule src="/build/bb-components.js"></script>
 
+  <link rel="stylesheet" type="text/css" href="/build/bb-components.css" />
+
   <script type="text/javascript">
     function changeProfile(el) {
       document.querySelector('bb-connector').path = el.value;
       console.log(document.querySelector('bb-connector'));
     }
+    function changeCollection(el) {
+      document.querySelector('bb-connector').path = el.value;
+      console.log(document.querySelector('bb-connector'));
+    }
+
+    console.log('Page Loaded')
   </script>
+  <style>
+    bb-connector {
+      --bb-border-radius: 3px;
+    }
+  </style>
 </head>
 
 <body style="font-family:sans-serif;font-size:1rem;color:red;padding:0;margin:0 auto;max-width:70rem;">
   <select onchange="changeProfile(this)">
-    <option value="hUPV62yx">J/Boats Profile</option>
-    <option value="Bob1b2HW">Sail Northwest Profile</option>
-    <option value="cQEBJhCO">Maritime Solutions Profile</option>
-    <option value="hXH5f9y7">Stearns Profile</option>
-    <option value="qF59nB5W">Sail Cal Profile</option>
-    <option value="rYzLF3xs">MarineMotion Profile</option>
-
-
-
-
-
+    <option>Change</option>
+    <option value="profile/hUPV62yx">J/Boats Profile</option>
+    <option value="profile/Bob1b2HW">Sail Northwest Profile</option>
+    <option value="profile/cQEBJhCO">Maritime Solutions Profile</option>
+    <option value="profile/hXH5f9y7">Stearns Profile</option>
+    <option value="profile/qF59nB5W">Sail Cal Profile</option>
+    <option value="profile/rYzLF3xs">MarineMotion Profile</option>
   </select>
-  <bb-connector mode="hash" base="profile" path="hUPV62yx"></bb-connector>
+  <select onchange="changeCollection(this)">
+    <option>Change</option>
+    <option value="collection/FTj4CM3F">Highfield Inflatables</option>
+    <option value="collection/SicLIyzH">Achilles Inflatables</option>
+  </select>
+  <bb-connector path="profile/hUPV62yx" root="#/"></bb-connector>
+  <x-bb-collection collection-path="SicLIyzH" collection-header="none" root="#/mypage/"></x-bb-collection>
 
 </body>
 
