check for profile

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <option value="SicLIyzH">Achilles Inflatables</option>
     <option value="2EUZn0BQ">J/Boats</option>
   </select>
-  <bb-connector root="/" path="collection/2EUZn0BQ" collection-list="card" collection-filters="model"
+  <bb-connector root="/" path="collection/ZMXApBEP" collection-list="card" collection-filters="model"
     collection-profile-filter="All Dealers">
   </bb-connector>
 
