--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,14 @@
   <select onchange="changeProfile(this)">
     <option>Change</option>
     <option value="profile/hUPV62yx">J/Boats Profile</option>
+    <option value="collection/2EUZn0BQ">J/Boats Collection</option>
     <option value="profile/Bob1b2HW">Sail Northwest Profile</option>
     <option value="profile/cQEBJhCO">Maritime Solutions Profile</option>
+    <option value="collections/SicLIyzH">Achillise Collection</option>
     <option value="profile/hXH5f9y7">Stearns Profile</option>
     <option value="profile/qF59nB5W">Sail Cal Profile</option>
     <option value="profile/rYzLF3xs">MarineMotion Profile</option>
+    <option value="listing/P6dZ578k">My Test Listing</option>
   </select>
   <select onchange="changeCollection(this)">
     <option>Change</option>
@@ -46,7 +49,7 @@
     <option value="SicLIyzH">Achilles Inflatables</option>
     <option value="2EUZn0BQ">J/Boats</option>
   </select>
-  <bb-connector root="/" path="collection/ZMXApBEP" collection-list="card" collection-filters="model"
+  <bb-connector root="/" path="listing/P6dZ578k" collection-list="card" collection-filters="model"
     collection-profile-filter="All Dealers">
   </bb-connector>
 
