--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
     <option value="SicLIyzH">Achilles Inflatables</option>
     <option value="2EUZn0BQ">J/Boats</option>
   </select>
-  <bb-connector root="/" path="collection/2EUZn0BQ" collection-list="card" collection-filters="model"
+  <bb-connector root="/" path="profile/jnet" collection-list="card" collection-filters="model"
     collection-profile-filter="All Dealers">
   </bb-connector>
 
