--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
     <option value="profile/qF59nB5W">Sail Cal Profile</option>
     <option value="profile/rYzLF3xs">MarineMotion Profile</option>
     <option value="listing/P6dZ578k">My Test Listing</option>
+    <option value="collection/88EU0Tik">Featured</option>
   </select>
   <select onchange="changeCollection(this)">
     <option>Change</option>
