remove email obscure

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     <option value="profile/hXH5f9y7">Stearns Profile</option>
     <option value="profile/qF59nB5W">Sail Cal Profile</option>
     <option value="profile/rYzLF3xs">MarineMotion Profile</option>
-    <option value="listing/P6dZ578k">My Test Listing</option>
+    <option value="listing/jcN1Yn50">Bad Listing</option>
     <option value="collection/88EU0Tik">Featured</option>
   </select>
   <select onchange="changeCollection(this)">
@@ -50,7 +50,7 @@
     <option value="SicLIyzH">Achilles Inflatables</option>
     <option value="2EUZn0BQ">J/Boats</option>
   </select>
-  <bb-connector root="/" path="collection/2EUZn0BQ" collection-list="card" collection-filters="model"
+  <bb-connector root="/" path="listing/jcN1Yn50" collection-list="card" collection-filters="model"
     collection-profile-filter="All Dealers">
   </bb-connector>
 
